@@ -1,5 +1,6 @@
 2008-09-21  Benjamin Mack  <benni@typo3.org>
 
+	* Followup to #9393: Small code cleanup in class.t3lib_treeview.php
 	* Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)
 
 2008-09-20  Dmitry Dulepov  <dmitry@typo3.org>
